# veriai-sdk

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  demo.sh  deny.toml  docker-compose.yml  prd.md  security_review.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/veriai-attestation/: Cargo.toml
crates/veriai-attestation/src/: lib.rs  mock.rs  nitro.rs
crates/veriai-cli/: Cargo.toml
crates/veriai-cli/src/: main.rs
crates/veriai-core/: Cargo.toml
crates/veriai-core/src/: hashing.rs  lib.rs  receipt.rs  verify.rs
crates/veriai-core/tests/: adversarial.rs  hashing.rs  verify.rs
crates/veriai-runtime/: Cargo.toml
crates/veriai-runtime/src/: error.rs  lib.rs  llama_cpp.rs  mock.rs
crates/veriai-types/: Cargo.toml
crates/veriai-types/src/: error.rs  lib.rs  openai.rs
crates/veriai-types/tests/: schema.rs
crates/veriai-wasm/: Cargo.toml  README.md
crates/veriai-wasm/src/: lib.rs
crates/verifier-service/: Cargo.toml
crates/verifier-service/src/: main.rs
deploy/nitro/: Dockerfile.enclave  README.md  build-eif.sh  entrypoint.sh  parent-relay.sh  run-enclave.sh
docs/: SPEC.md  dependency-exceptions.md
examples/01-chat-demo/: Cargo.toml
examples/01-chat-demo/src/: lib.rs  main.rs
examples/01-chat-demo/tests/: chat_completions_test.rs
supply-chain/: config.toml
tests/fixtures/: gen_certs.sh  mock-aws-intermediate.key.pem  mock-aws-intermediate.pem  mock-aws-leaf.key.pem  mock-aws-leaf.pem  mock-aws-root.key.pem  mock-aws-root.pem
veriai-sdk/: Cargo.toml
veriai-sdk/src/: cli.rs  error.rs  hashing.rs  lib.rs  receipt.rs  verify.rs
veriai-sdk/src/nsm/: mock.rs  mod.rs  real.rs  schema.rs
veriai-sdk/tests/: hashing.rs  receipt.rs  schema.rs  verify.rs
veriai-sdk/tests/fixtures/: mock-aws-intermediate.pem  mock-aws-leaf.pem
