[workspace]
members = [
    "crates/veriai-types",
    "crates/veriai-core",
    "crates/veriai-attestation",
    "crates/veriai-cli",
    "crates/verifier-service",
    "crates/veriai-runtime",
    "crates/veriai-wasm",
    "examples/01-chat-demo",
]
resolver = "2"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"

[profile.release.package.veriai-wasm]
opt-level = "z"
