[package]
name = "veriai-sdk"
version = "0.1.0"
edition = "2024"
[features]
default = ["mock-hardware"]
mock-hardware = []
real-hardware = []
test-mode = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ciborium = "0.2"

coset = "0.3"
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
p384 = { version = "0.13", features = ["ecdsa", "sha384"] }

[dev-dependencies]
tempfile = "3.10"

