[package]
name = "veriai-attestation"
version = "0.1.0"
edition = "2024"
license.workspace = true
publish.workspace = true

[features]
default = ["mock-hardware"]
mock-hardware = []
real-hardware = ["dep:aws-nitro-enclaves-nsm-api"]

[dependencies]
veriai-types = { path = "../veriai-types" }
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2"
coset = "0.3"
p384 = { version = "0.13", features = ["ecdsa", "sha384", "pem"] }
base64ct = { version = "1.6", features = ["alloc"] }
serde_bytes = "0.11"
async-trait = "0.1"
aws-nitro-enclaves-nsm-api = { version = "0.4.0", optional = true }
x509-cert = "0.2"
sha2 = "0.10"
hex = "0.4"
