[package]
name = "veriai-core"
version = "0.1.0"
edition = "2024"

[features]
default = ["mock-hardware"]
mock-hardware = ["veriai-attestation/mock-hardware"]
real-hardware = ["veriai-attestation/real-hardware"]
test-mode = []

[dependencies]
veriai-types = { path = "../veriai-types" }
veriai-attestation = { path = "../veriai-attestation", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ciborium = "0.2"
coset = "0.3"
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
p384 = { version = "0.13", features = ["ecdsa", "sha384", "pem"] }
base64ct = { version = "1.6", features = ["alloc"] }
rand_core = { version = "0.6", features = ["getrandom"] }
x509-cert = "0.2"
hex = "0.4"

[dev-dependencies]
tempfile = "3.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }


