[package]
name = "veriai-runtime"
version = "0.1.0"
edition = "2024"
license.workspace = true
publish.workspace = true

[dependencies]
veriai-types = { path = "../veriai-types" }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
thiserror = "1.0"
tokio = { version = "1.0", features = ["process"] }
