[package]
name = "veriai-wasm"
version = "0.1.0"
edition = "2024"
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
veriai-types = { path = "../veriai-types" }
veriai-core = { path = "../veriai-core", default-features = false }
veriai-attestation = { path = "../veriai-attestation", default-features = false }
async-trait = "0.1"
base64ct = { version = "1.6", features = ["alloc"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
veriai-attestation = { path = "../veriai-attestation", features = ["mock-hardware"] }
veriai-core = { path = "../veriai-core", features = ["mock-hardware"] }
