[package]
name = "verifier-service"
version = "0.1.0"
edition = "2024"

[features]
default = ["mock-hardware"]
mock-hardware = ["veriai-core/mock-hardware", "veriai-attestation/mock-hardware"]
real-hardware = ["veriai-core/real-hardware", "veriai-attestation/real-hardware"]
test-mode = ["veriai-core/test-mode"]

[dependencies]
veriai-types = { path = "../veriai-types" }
veriai-core = { path = "../veriai-core", default-features = false }
veriai-attestation = { path = "../veriai-attestation", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["limit", "trace", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
sha2 = "0.10"
base64ct = { version = "1.6", features = ["alloc"] }

[dev-dependencies]
tempfile = "3.10"
