[package]
name = "chat-demo"
version = "0.1.0"
edition = "2024"
license.workspace = true
publish.workspace = true

[lib]
name = "chat_demo"
path = "src/lib.rs"

[[bin]]
name = "chat-demo"
path = "src/main.rs"

[features]
default = ["mock-hardware"]
mock-hardware = ["veriai-core/mock-hardware", "veriai-attestation/mock-hardware"]
real-hardware = ["veriai-core/real-hardware", "veriai-attestation/real-hardware"]
test-mode = ["veriai-core/test-mode"]

[dependencies]
veriai-types = { path = "../../crates/veriai-types" }
veriai-core = { path = "../../crates/veriai-core", default-features = false }
veriai-attestation = { path = "../../crates/veriai-attestation", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
sha2 = "0.10"
hex = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
base64ct = { version = "1.6", features = ["alloc"] }
veriai-runtime = { path = "../../crates/veriai-runtime" }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
coset = "0.3"
